frontend/src/scss/slides/_slide-grid.scss
.lms-slides {
  position: relative;
  //min-height: 100vh;
  height: 100%;
  width: 100%;
  //padding-bottom: 53px;
}

.lms-slide {
  display: none;
  //height: 100vh;
  height: 644px;
  flex-direction: column;

  @media screen and (max-width: 1024px) {
    height: auto;
    //min-height: 100vh;
  }

  &-regular {
    @media screen and (max-width: 1024px) {
      flex-direction: row;
      flex-wrap: wrap;
    }
  }

  &.active {
    display: flex;
  }
}

.site-content {
  padding: 0 !important;
}

@for $i from 1 through 9 {
  .lms-grid-block-#{$i} {
    order: $i*10
  }
}

.lms-grid-container {
  //height: 100vh;
  height: 100%;

  //@media screen and (max-width: 1024px) {
  //  height: auto;
  //}

  .lms-grid-block {
    text-align: center;

    @media screen and (max-width: 1024px) {
      width: 100% !important;
      min-height: 300px;
    }
  }

  &-1 {
    .lms-grid-block {
      height: 100%;
      width: 100%;
    }
  }

  &-2 {
    .lms-grid-block {
      height: 100%;
      width: 50%;
    }
  }

  &-3 {
    .lms-grid-block {
      height: 100%;
      width: 33.3333%;
    }
  }

  &-4 {
    .lms-grid-block {
      height: 50%;
      width: 50%;
    }
  }

  &-5 {
    .lms-grid-block {
      height: 50%;
      width: 33.333%;

      &:nth-last-of-type(-n+2) {
        width: 50%;
      }

      //&:nth-child(10) {
      //  width: 50% !important;
      //}
    }
  }

  &-6 {
    .lms-grid-block {
      height: 50%;
      width: 33.333%;
    }
  }

  &-7 {
    .lms-grid-block {
      height: 33.333%;
      width: 33.333%;

      &:last-child {
        width: 100%;
      }
    }
  }

  &-8 {
    .lms-grid-block {
      height: 33.333%;
      width: 33.333%;

      &:nth-last-of-type(-n+2) {
        width: 50%;
      }
    }
  }

  &-9 {
    .lms-grid-block {
      height: 33.333%;
      width: 33.333%;
    }
  }
}

.lms-grid-block {
  display: block;

  &--link {
    text-decoration: none;

    &:hover,
    &:focus,
    &:active {
      text-decoration: none;
      outline: none;
    }
  }

  &--image {
    .lms-grid-block__wrapper {
      height: 100%;
    }
  }

  &__image {
    object-fit: contain;
    height: 100%;
    width: 100%;
  }
}

.lms-slide {
  &-dynamic {

  }

  &-full-width {
    .lms-grid-container {
      flex-direction: column;

      .lms-grid-block-full-width {
        width: 100%;
        height: auto;
        flex: 1;
      }
    }
  }
}

.lms-slide-section-display-once_at_a_time {
  .lms-grid-block {
    display: none !important;

    &.active {
      display: flex !important;
    }
  }

  &.passed {
    .lms-grid-block {
      display: flex !important;
    }
  }
}

